--- a/Text_extract_Twitt.ipynb
+++ b/Text_extract_Twitt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "entertaining-value",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "lined-shannon",
    "metadata": {},
    "outputs": [],
@@ -80,30 +80,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "abandoned-cancer",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fastfood User Responce (message,ID, ,Likes) \n",
-    "def user_response(get_id)\n",
-    "    tweet_fields=[\"public_metrics\"]\n",
-    "    message=[]\n",
+    "tweet_fields=[\"public_metrics\"]\n",
+    "message=[]\n",
     "    #ID = []\n",
-    "    like_count = []\n",
-    "    for response in tweepy.Paginator(client.get_users_mentions,get_id,max_results=100,tweet_fields=tweet_fields):\n",
-    "        for msg in response.data :\n",
-    "            message.append(msg)\n",
-    "            #ID.append(msg.id)\n",
-    "            like_count.append(str(msg.public_metrics.get('like_count')))\n",
-    "            return like_count,message\n",
-    "\n",
-    "\n"
+    "like_count = []\n",
+    "for response in tweepy.Paginator(client.get_users_mentions,212255045,max_results=100,tweet_fields=tweet_fields):\n",
+    "    for msg in response.data :\n",
+    "        message.append(msg)\n",
+    "        #ID.append(msg.id)\n",
+    "        like_count.append(str(msg.public_metrics.get('like_count')))\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
+   "id": "legendary-skirt",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "unauthorized-serial",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['0'],\n",
+       " [<Tweet id=1582212407660724225 text='Like 2/10 @shakeshack experience. I was handed a soupy shake off a tray of pre made shakes then I get home to find that it looks like I was given all the left over fries.'>])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "=user_response(212255045)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "future-arrest",
    "metadata": {},
    "outputs": [],
@@ -113,12 +140,12 @@
     "df = df.iloc[: , 1:]\n",
     "df[\"likecount\"]=like_count\n",
     "\n",
-    "csv_data = df.to_csv('shakeshack')"
+    "csv_data = df.to_csv('shakeshack_test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "unknown-anthropology",
    "metadata": {},
    "outputs": [
@@ -144,7 +171,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>lang</th>\n",
        "      <th>public_metrics</th>\n",
        "      <th>text</th>\n",
        "      <th>likecount</th>\n",
@@ -153,42 +179,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1582072234155610112</td>\n",
-       "      <td>en</td>\n",
+       "      <td>1582212407660724225</td>\n",
        "      <td>{'retweet_count': 0, 'reply_count': 0, 'like_c...</td>\n",
-       "      <td>@BravoTV @Wendys She looks like that episode o...</td>\n",
+       "      <td>Like 2/10 @shakeshack experience. I was handed...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1582072228845211649</td>\n",
-       "      <td>en</td>\n",
+       "      <td>1582196155969961984</td>\n",
        "      <td>{'retweet_count': 0, 'reply_count': 0, 'like_c...</td>\n",
-       "      <td>I just ate a burger.  @Wendys is my vice.  I w...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>@CapitalOne @shakeshack @NYCWFF Remember when ...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1582072133660086274</td>\n",
-       "      <td>en</td>\n",
+       "      <td>1582189612612521985</td>\n",
        "      <td>{'retweet_count': 0, 'reply_count': 0, 'like_c...</td>\n",
-       "      <td>had beef wit @Wendys ever since the discontinu...</td>\n",
+       "      <td>Does anyone know why @shakeshack won’t deliver...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1582071992575852545</td>\n",
-       "      <td>en</td>\n",
+       "      <td>1582184926002446336</td>\n",
        "      <td>{'retweet_count': 0, 'reply_count': 0, 'like_c...</td>\n",
-       "      <td>@Cinnabon @SlimJim @AuntieAnnes As long as you...</td>\n",
+       "      <td>Hey @shakeshack we have some big ways to get y...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1582071808798650371</td>\n",
-       "      <td>en</td>\n",
-       "      <td>{'retweet_count': 0, 'reply_count': 0, 'like_c...</td>\n",
-       "      <td>@Wendys - I sent a complaint through your webs...</td>\n",
+       "      <td>1582181168559947776</td>\n",
+       "      <td>{'retweet_count': 0, 'reply_count': 1, 'like_c...</td>\n",
+       "      <td>me and a cockroach making eye contact just as ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -196,29 +217,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                    id lang  \\\n",
-       "0  1582072234155610112   en   \n",
-       "1  1582072228845211649   en   \n",
-       "2  1582072133660086274   en   \n",
-       "3  1582071992575852545   en   \n",
-       "4  1582071808798650371   en   \n",
-       "\n",
-       "                                      public_metrics  \\\n",
-       "0  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
-       "1  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
-       "2  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
-       "3  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
-       "4  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
+       "                    id                                     public_metrics  \\\n",
+       "0  1582212407660724225  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
+       "1  1582196155969961984  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
+       "2  1582189612612521985  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
+       "3  1582184926002446336  {'retweet_count': 0, 'reply_count': 0, 'like_c...   \n",
+       "4  1582181168559947776  {'retweet_count': 0, 'reply_count': 1, 'like_c...   \n",
        "\n",
        "                                                text likecount  \n",
-       "0  @BravoTV @Wendys She looks like that episode o...         0  \n",
-       "1  I just ate a burger.  @Wendys is my vice.  I w...         1  \n",
-       "2  had beef wit @Wendys ever since the discontinu...         0  \n",
-       "3  @Cinnabon @SlimJim @AuntieAnnes As long as you...         0  \n",
-       "4  @Wendys - I sent a complaint through your webs...         0  "
+       "0  Like 2/10 @shakeshack experience. I was handed...         0  \n",
+       "1  @CapitalOne @shakeshack @NYCWFF Remember when ...         0  \n",
+       "2  Does anyone know why @shakeshack won’t deliver...         0  \n",
+       "3  Hey @shakeshack we have some big ways to get y...         0  \n",
+       "4  me and a cockroach making eye contact just as ...         0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
+   "id": "encouraging-perspective",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size =  (839, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Size = ', df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "impressed-majority",
    "metadata": {},
    "outputs": [],
@@ -239,14 +271,13 @@
     " #       print(msg)\n",
     "query = 'from:shakeshack -is:retweet'\n",
     "tweet_fields=['author_id', 'created_at','id',\"public_metrics\"]        \n",
-    "def search_user_all_tweets(query,tweet_fields)\n",
-    "    message=[]\n",
-    "    like_count = []\n",
-    "    for response in tweepy.Paginator(client.search_all_tweets,query,max_results=100,tweet_fields=tweet_fields,limit=2):\n",
-    "        for msg in response.data :\n",
-    "            message.append(msg)\n",
-    "            like_count.append(str(msg.public_metrics.get('like_count')))\n",
-    "            return(message,like_count)\n"
+    "message=[]\n",
+    "like_count = []\n",
+    "for response in tweepy.Paginator(client.search_recent_tweets,query,max_results=100,tweet_fields=tweet_fields):\n",
+    "    for msg in response.data :\n",
+    "        message.append(msg)\n",
+    "        like_count.append(str(msg.public_metrics.get('like_count')))\n",
+    "            \n"
    ]
   },
   {
